[gd_scene load_steps=10 format=2]

[ext_resource path="res://player/player_scripts/player_template.gd" type="Script" id=1]
[ext_resource path="res://player/items/rifle.png" type="Texture" id=2]
[ext_resource path="res://player/player_sprites/character_4_front_arm.png" type="Texture" id=3]
[ext_resource path="res://player/player_sprites/character_4_head.png" type="Texture" id=4]
[ext_resource path="res://player/player_sprites_animated/character_4_animation_sheet.png" type="Texture" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 5, 7.5 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 6, 8.5 )

[sub_resource type="Animation" id=3]
resource_name = "idle"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=4]
resource_name = "walk"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 8, 9, 10, 11, 12, 13, 14, 15 ]
}

[node name="player_template" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="col_shape_2d" type="CollisionShape2D" parent="."]
position = Vector2( 0, 0.5 )
shape = SubResource( 1 )

[node name="area2d" type="Area2D" parent="."]

[node name="col_shape_2d" type="CollisionShape2D" parent="area2d"]
position = Vector2( 0, 0.5 )
shape = SubResource( 2 )

[node name="player_body" type="Node2D" parent="."]

[node name="anim_player" type="AnimationPlayer" parent="player_body"]
anims/idle = SubResource( 3 )
anims/walk = SubResource( 4 )

[node name="body" type="Sprite" parent="player_body"]
modulate = Color( 0.498039, 0.615686, 0.960784, 1 )
texture = ExtResource( 5 )
hframes = 8
vframes = 2

[node name="head" type="Sprite" parent="player_body"]
position = Vector2( -0.5, -5 )
texture = ExtResource( 4 )
offset = Vector2( 0.5, -1 )

[node name="frontarm" type="Sprite" parent="player_body"]
modulate = Color( 0.498039, 0.615686, 0.960784, 1 )
position = Vector2( -2, -4 )
texture = ExtResource( 3 )
offset = Vector2( -1, 2 )
__meta__ = {
"_editor_description_": ""
}

[node name="held_item" type="Sprite" parent="player_body/frontarm"]
position = Vector2( -2, 6.5 )
rotation = 1.5708
texture = ExtResource( 2 )

[node name="intr_cast" type="RayCast2D" parent="player_body/frontarm"]
position = Vector2( 0, 3 )
enabled = true
cast_to = Vector2( 0, 30 )
collision_mask = 2
